[project]
name = "veux"
version = "0.0.41"
authors = [
  {name="Claudio M. Perez", email="50180406+claudioperez@users.noreply.github.com"},
]
description="Fast and friendly finite element visualization for xara and OpenSees/OpenSeesPy."

license = {file = ".github/LICENSE.txt"}
readme = "README.md"

keywords = [
  "visualization",
  "rendering",
  "finite-rotations",
  "post-processing",
  "finite-element-analysis",
  "xara",
  "opensees",
  "openseespy",
  "3D",
  "glTF"
] 

dependencies = [
  "opensees>=0.1.8",
  "quakeio",
  "bottle",
  "openbim",
  "xcae",
  "xcsi",

  "pyyaml",
  "scipy",
  "numpy",
  "plotly",

# "trimesh",
  "xara",
  "pygltflib",
  "colorcet",
  "shps>=0.0.28"
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: C',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]


[project.urls]
Repository = "https://github.com/STAIRLab/veux"
Documentation = "https://veux.io"
Examples = "https://gallery.stairlab.io"

[project.scripts]
veux = "veux.__main__:main"

[build-system]
requires = [
    "setuptools >= 52.0.2",
]

build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
veux = ["assets/*", "viewer/*"]


